--- a/JS Mini Project/SimonGame/index.html
+++ b/JS Mini Project/SimonGame/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <h1>Simon Game</h1>
-    <h3>Press any Key to Start</h3>
+    <h3 id="display">Press any Key to Start</h3>
 
     <div class="btn-container">
         <div class="line-one">
             <div class="btn" id="box1" type="button">1</div>
             <div class="btn" id="box2" type="button">2</div>
-        </div class="line-one">
+        </div>
         <div class="line-two">
             <div class="btn" id="box3" type="button">3</div>
             <div class="btn" id="box4" type="button">4</div>
-        </div class="line-two">
+        </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
