--- a/JS Mini Project/SimonGame/index.html
+++ b/JS Mini Project/SimonGame/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Simon Game</h1>
+    <h1>Simon Says Game</h1>
     <h2 id="display">Press any Key to Start</h2>
 
     <div class="btn-container">
         <div class="line-one">
-            <div class="btn red" id="box1" type="button">1</div>
-            <div class="btn yellow" id="box2" type="button">2</div>
+            <div class="btn red" id="red" type="button">1</div>
+            <div class="btn yellow" id="yellow" type="button">2</div>
         </div>
         <div class="line-two">
-            <div class="btn green" id="box3" type="button">3</div>
-            <div class="btn purple" id="box4" type="button">4</div>
+            <div class="btn green" id="green" type="button">3</div>
+            <div class="btn purple" id="purple" type="button">4</div>
         </div>
     </div>
     <script src="app2.js"></script>
